# fips-native

./: .gitignore  Cargo.toml  REACHABILITY_ANALYSIS.md  README.md  build_apk.sh  index.html  package-lock.json  package.json  settings.gradle.kts  tsconfig.tsbuildinfo  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fips/android/: FipsBridge.kt  FipsVpnService.kt  MainActivity.kt
app/src/main/java/com/fips/android/ui/: DashboardScreen.kt  Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
fips/: Cargo.toml  compose.fips.yml
fips-jni/: Cargo.toml
fips-jni/src/: bridge.rs  lib.rs  tun_android.rs
fips/src/control/: commands.rs  queries.rs
fips/src/node/: lifecycle.rs  mod.rs
fips/src/node/handlers/: discovery.rs  rx_loop.rs  session.rs  timeout.rs
fips/src/transport/: mod.rs
fips/src/transport/ethernet/: socket.rs  socket_linux.rs  socket_macos.rs
fips/src/transport/udp/: socket.rs
fips/src/upper/: dns.rs  icmp.rs  tun.rs
gradle/: libs.versions.toml
scripts/: build_android.sh
src/: App.tsx  ConfigView.tsx  MonitorView.tsx  TreeGraph.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: dashboard.rs  lib.rs  main.rs  vpn.rs
