[package]
name = "fips-jni"
version = "0.1.0"
edition = "2024"

[lib]
name = "fips_jni"
crate-type = ["cdylib"]

[dependencies]
fips = { path = "../../fips", default-features = false }
jni = "0.21"
once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
libc = "0.2"
